--- a/management-cluster/deploy/workload-clusters/manifests/workload.yaml
+++ b/management-cluster/deploy/workload-clusters/manifests/workload.yaml
@@ -28,7 +28,8 @@ spec:
       subPath: management-cluster/workload/manifests
 #      secretRef:
 #        name: #@ data.values.git.secretRef
-#  template:
+  template:
+  - ytt: {}
 #  - ytt:
 #      ignoreUnknownComments: true
 #      inline:
